# -plex-core

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.github/workflows/: ci.yml
src/: bridge.rs  call_media.rs  call_state.rs  calls.rs  chat_protocol.rs  connection_pool.rs  crypto.rs  dht.rs  events.rs  ffi_bridge.rs  ffi_call_media.rs  ffi_calls.rs  ffi_chat.rs  ffi_crypto.rs  ffi_dht.rs  ffi_identity.rs  ffi_mesh.rs  ffi_message_router.rs  ffi_metrics.rs  ffi_outbox.rs  ffi_profile.rs  ffi_receiver.rs  ffi_storage.rs  ffi_sync.rs  ffi_transfer.rs  ffi_x3dh.rs  integration_tests.rs  lib.rs  mesh_handoff.rs  message_router.rs  metrics.rs  network.rs  relay_reputation.rs  storage.rs  sync_protocol.rs  transfer.rs  transport.rs  x3dh.rs
src/storage/: call_signals.rs  chat_messages.rs  delivery_dht.rs  events.rs  projection_events.rs  ratchet.rs
tests/: integration_tests.rs
